[package]
name = "bevy_chess"
version = "0.1.0"
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_mod_picking = { version = "0.13", features = ["selection"]}
